--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.rubik-mono-one-regular {
-  font-family: "Rubik Mono One", monospace;
-  font-weight: 400;
-  font-style: normal;
-}
-
 
 #root {
   width: 100vw;
